# xllm

./: CMakeLists.txt  setup.py  vcpkg-configuration.json  vcpkg.json
xllm/: CMakeLists.txt
xllm/core/framework/: hf_model_loader.cpp
xllm/core/framework/chat_template/: jinja_chat_template.cpp
xllm/core/framework/model/: model_args.h
xllm/core/framework/request/: CMakeLists.txt  mm_data.h  mm_input_helper.cpp  mm_input_helper.h
xllm/models/: qwen2_5_vl.h
xllm/models/vlm/: qwen2_5_vl.h
xllm/processors/: image_processor.cpp  image_processor.h  qwen2_vl_image_processor.cpp  qwen2_vl_image_processor.h  qwen3_vl_image_processor.cpp  qwen3_vl_image_processor.h
